deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dallyeobom-api
  namespace: stable
spec:
  progressDeadlineSeconds: 900
  selector:
    matchLabels:
      app: dallyeobom-api
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: dallyeobom-api
    spec:
      containers:
        - image: ghcr.io/dallyeobom/dallyeobom_be:latest
          imagePullPolicy: Always
          name: dallyeobom-api
          resources:
            limits:
              cpu: 800m
              memory: 2048Mi
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /ready
            initialDelaySeconds: 60
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 130
            timeoutSeconds: 10
            failureThreshold: 10
      volumes:
        - name: share-vol
          emptyDir: {}
      imagePullSecrets:
        - name: ghcr-login-secret
      nodeSelector:
        performance: high
