deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dallyeobom-api-svc
  namespace: stable
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: dallyeobom-api
